# sh

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: main.c  shell  template.c
tests/: tests.cpp
